// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`compoenents/modals/confirm-modal should render defaults 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 flex items-center justify-center z-1200"
  >
    <summary
      class="absolute inset-0 bg-black opacity-75"
      data-testid="modal__backdrop"
    />
    <div
      class="relative bg-paper max-w-2xl w-sm md:w-md z-1000 overflow-hidden shadow-lg h-full min-w-full sm:min-w-sm  sm:rounded-xl sm:h-fit"
      data-testid="modal"
    >
      <div
        class="flex justify-between items-center p-3"
      >
        <p
          class="text-2xl font-bold"
        >
          Confirmation
        </p>
        <button
          class="bg-transparent text-text-primary hover:text-text-primary hover:bg-text-secondary/30 cursor-pointer hover:text-text-primary size-10 border-transparent min-w-fit rounded-full p-1 flex items-center justify-center flex justify-between focus-within:outline-none focus:outline-none"
        >
          <svg
            class="min-w-fit min-h-fit"
            data-testid="CloseIcon"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="overflow-y-auto p-3"
        style="max-height: calc(100vh - 0px);"
      >
        <span
          class="my-8 font-bold italic"
        >
          Are you sure you want to proceed?
        </span>
        <div
          class="flex justify-end mt-4 gap-2"
        >
          <button
            class="px-4 py-2 text-text-secondary border-2 border-border  hover:text-text-primary/70 hover:border-text-primary/70 hover:text-text-primary/70 cursor-pointer rounded-lg text-lg font-bold uppercase"
          >
            Cancel
          </button>
          <button
            class="px-4 py-2 bg-error/20 text-error hover:bg-red-800 hover:text-red-300 cursor-pointer rounded-lg text-lg font-bold uppercase"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`compoenents/modals/confirm-modal should render with passed props 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 flex items-center justify-center z-1200"
  >
    <summary
      class="absolute inset-0 bg-black opacity-75"
      data-testid="modal__backdrop"
    />
    <div
      class="relative bg-paper max-w-2xl w-sm md:w-md z-1000 overflow-hidden shadow-lg h-full min-w-full sm:min-w-sm  sm:rounded-xl sm:h-fit"
      data-testid="modal"
    >
      <div
        class="flex justify-between items-center p-3"
      >
        <p
          class="text-2xl font-bold"
        >
          Test title
        </p>
        <button
          class="bg-transparent text-text-primary hover:text-text-primary hover:bg-text-secondary/30 cursor-pointer hover:text-text-primary size-10 border-transparent min-w-fit rounded-full p-1 flex items-center justify-center flex justify-between focus-within:outline-none focus:outline-none"
        >
          <svg
            class="min-w-fit min-h-fit"
            data-testid="CloseIcon"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
      <div
        class="overflow-y-auto p-3"
        style="max-height: calc(100vh - 0px);"
      >
        <span
          class="my-8 font-bold italic"
        >
          Test message
        </span>
        <div
          class="flex justify-end mt-4 gap-2"
        >
          <button
            class="px-4 py-2 text-text-secondary border-2 border-border  hover:text-text-primary/70 hover:border-text-primary/70 hover:text-text-primary/70 cursor-pointer rounded-lg text-lg font-bold uppercase"
          >
            Cancel
          </button>
          <button
            class="px-4 py-2 bg-error/20 text-error hover:bg-red-800 hover:text-red-300 cursor-pointer rounded-lg text-lg font-bold uppercase"
          >
            Confirm
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
